--- a/enagramtask/src/components/Panel/panel.css
+++ b/enagramtask/src/components/Panel/panel.css
@@ -1,8 +1,13 @@
 .panel-wrapper {
 width: 100%;
-height: 100%;
+height: 100vh;
 background: #2D62ED;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+align-items: center;
+
 }
 
 .panel-item {
@@ -18,4 +23,15 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
 
 .panel-item img {
     width: 30px;
+}
+.panel-top  {
+   height: 150px;
+   width: 177px;
+   display: flex;
+   flex-wrap: wrap;
+   align-items: center;
+   justify-content: flex-end;
+}
+.panel-top div {
+    
 }
